[gd_scene load_steps=10 format=3 uid="uid://dxw1l16xbvmo"]

[ext_resource type="Script" uid="uid://3bvmw3csr0er" path="res://scripts/slime_purple.gd" id="1_2p8uo"]
[ext_resource type="Texture2D" uid="uid://b1grjt5cgpe8f" path="res://assets/sprites/slime_purple.png" id="1_a7qdv"]
[ext_resource type="PackedScene" uid="uid://cjypdfm0u33kx" path="res://scenes/killzone.tscn" id="2_2p8uo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1dhrg"]
atlas = ExtResource("1_a7qdv")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m27ho"]
atlas = ExtResource("1_a7qdv")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iamt"]
atlas = ExtResource("1_a7qdv")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7txi6"]
atlas = ExtResource("1_a7qdv")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_0tp3e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dhrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m27ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iamt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7txi6")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ya7o"]
size = Vector2(10, 10)

[node name="Slime_Purple" type="Node2D"]
script = ExtResource("1_2p8uo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -12)
sprite_frames = SubResource("SpriteFrames_0tp3e")
autoplay = "default"
frame_progress = 0.5466
flip_h = true

[node name="Killzone" parent="AnimatedSprite2D" instance=ExtResource("2_2p8uo")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Killzone"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_7ya7o")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(1, -6)
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(1, -6)
target_position = Vector2(-8, 0)

[node name="RayCastLeftDown" type="RayCast2D" parent="."]
position = Vector2(1, -6)
target_position = Vector2(-13, 8)

[node name="RayCastRightDown" type="RayCast2D" parent="."]
position = Vector2(1, -6)
target_position = Vector2(11, 8)
